--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,33 +9,31 @@
 
     <ImageView
         android:id="@+id/imageSplash1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:layout_marginTop="92dp"
+        android:padding="10dp"
         android:transitionName="logo_image"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.009"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/taraznet2" />
 
     <TextView
         android:id="@+id/textSlogan"
-        android:layout_width="350dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="164dp"
+        android:layout_marginTop="84dp"
         android:gravity="center"
         android:padding="5dp"
-        android:text="تحقق رویش ماندگار"
+        android:text="مجموعه خانه‌های هوشمند تراز"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="35sp"
         android:transitionName="logo_text"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageSplash1"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/imageSplash1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
