--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/SensorImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="90dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/taraznet2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -176,8 +176,9 @@
     <Button
         android:id="@+id/configServerBtn"
         android:layout_width="40dp"
+        android:layout_margin="5dp"
         android:layout_height="40dp"
-        android:background="@drawable/ic_baseline_settings_input_antenna_24"
+        android:background="@drawable/ic_baseline_settings_24"
         android:padding="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
