--- a/app/src/main/res/layout/activity_config_server.xml
+++ b/app/src/main/res/layout/activity_config_server.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:text="جهت تنطبم دستگاه، اطلاعات خود را وارد کنید"
+        android:text="جهت تنظیم دستگاه، اطلاعات خود را وارد کنید"
         android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
