--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/SensorImage"
-        android:layout_width="170dp"
+        android:layout_width="190dp"
         android:layout_height="90dp"
         android:layout_marginTop="50dp"
         android:background="@drawable/taraznet2"
@@ -16,173 +16,119 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <Button
-        android:id="@+id/statusRefreshButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-
-        android:padding="10dp"
-        android:text="دریافت آخرین وضعیت دستگاه"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SensorImage" />
-
-
-    <!--    <LinearLayout-->
-    <!--        android:id="@+id/linearLayout"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_margin="10dp"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/statusTxt">-->
-
-
-    <!--        <com.google.android.material.button.MaterialButtonToggleGroup-->
-    <!--            android:id="@+id/armedToggleButton"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-
-    <!--            android:layout_gravity="center"-->
-    <!--            android:defaultFocusHighlightEnabled="true"-->
-    <!--            android:focusedByDefault="true"-->
-    <!--            android:gravity="center"-->
-    <!--            app:checkedButton="@+id/button1"-->
-    <!--            app:layout_constraintEnd_toStartOf="@+id/alarmsStatusTxt"-->
-    <!--            app:layout_constraintStart_toStartOf="parent"-->
-    <!--            app:layout_constraintTop_toBottomOf="@+id/statusTxt"-->
-    <!--            app:singleSelection="true">-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/button"-->
-    <!--                style="?attr/materialButtonOutlinedStyle"-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="match_parent"-->
-    <!--                android:layout_marginStart="5dp"-->
-    <!--                android:defaultFocusHighlightEnabled="true"-->
-    <!--                android:focusedByDefault="true"-->
-    <!--                android:text="غیرفعال" />-->
-
-    <!--            <Button-->
-    <!--                android:id="@+id/buttonFemaleGender"-->
-    <!--                style="?attr/materialButtonOutlinedStyle"-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:layout_marginStart="10dp"-->
-    <!--                android:text="فعال" />-->
-
-    <!--        </com.google.android.material.button.MaterialButtonToggleGroup>-->
-
-    <!--        <TextView-->
-    <!--            android:id="@+id/alarmsStatusTxt"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_gravity="center"-->
-    <!--            android:layout_marginLeft="5dp"-->
-    <!--            android:text="وضعیت آماده به کار آلارم دستگاه"-->
-    <!--            android:textSize="18sp"-->
-    <!--            app:layout_constraintEnd_toEndOf="parent"-->
-    <!--            app:layout_constraintTop_toBottomOf="@+id/statusTxt" />-->
-    <!--    </LinearLayout>-->
-
-
-    <!--    <Button-->
-    <!--        android:layout_width="40dp"-->
-    <!--        android:layout_height="40dp"-->
-    <!--        android:background="@drawable/ic_baseline_refresh_24"-->
-    <!--        android:padding="10dp"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-
-    <TextView
-        android:id="@+id/statusTxt"
+    <LinearLayout
+        android:id="@+id/firstLinear"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="52dp"
-        android:text="وضعیت دستگاه "
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusRefreshButton" />
+        android:layout_height="60dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/SensorImage"
+        tools:layout_editor_absoluteX="0dp">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusTxt" />
+        <Button
+            android:id="@+id/statusRefreshButton"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_baseline_refresh_24"
+            android:gravity="center"
+            android:textAlignment="center"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/SensorImage" />
+
+        <TextView
+            android:id="@+id/statusTxt"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:layout_marginTop="52dp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:text="وضعیت دستگاه "
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25sp" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/armedStatusTxt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_marginTop="12dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
         android:text="تعیین وضعیت آماده به کار آلارم دستگاه"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/firstLinear" />
+
+    <LinearLayout
+        android:id="@+id/secondLinear"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@+id/armedStatusTxt">
 
 
-    <Button
-        android:id="@+id/armAlarmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:textColor="@color/green"
-        android:backgroundTint="@color/white"
-        android:elevation="50dp"
-        android:layout_marginEnd="108dp"
-        android:text="تغییر حالت آلارم به آماده به کار"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/armedStatusTxt" />
+        <Button
+            android:id="@+id/armAlarmButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:elevation="50dp"
+            android:gravity="center"
+            android:text="تغییر حالت آلارم به آماده به کار"
+            android:textColor="@color/green" />
 
-    <Button
-        android:id="@+id/disarmAlarmButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="88dp"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/red"
-        android:elevation="50dp"
-        android:text="تغییر حالت آلارم به غیرفعال"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/armedStatusTxt" />
+        <Button
+            android:id="@+id/disarmAlarmButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="@color/white"
+            android:elevation="50dp"
+            android:gravity="center"
+            android:text="تغییر حالت آلارم به غیرفعال"
+            android:textColor="@color/red" />
+
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/disableAlarmSoundButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
-        android:layout_marginEnd="128dp"
+        android:layout_marginTop="60dp"
+
         android:text="قطع صدای آژیر دستگاه"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/armAlarmButton" />
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/secondLinear" />
 
     <Button
         android:id="@+id/configServerBtn"
         android:layout_width="40dp"
-        android:layout_margin="5dp"
         android:layout_height="40dp"
+        android:layout_margin="5dp"
         android:background="@drawable/ic_baseline_settings_24"
         android:padding="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/deleteInfoBtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/ic_baseline_clear_24"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <!--    <EditText-->
