--- a/app/src/main/res/layout/activity_config_sensor.xml
+++ b/app/src/main/res/layout/activity_config_sensor.xml
@@ -46,5 +46,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wfiSettingBtn" />
 
+    <Button
+        android:id="@+id/sendBtn"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="56dp"
+        android:text="send"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/confirmWifiBtn" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
