much happende. I do not know :)

--- a/app/src/main/res/layout/activity_config_server.xml
+++ b/app/src/main/res/layout/activity_config_server.xml
@@ -237,16 +237,16 @@
             <!--                android:textColor="@color/black" />-->
 
             <Button
-                android:id="@+id/btntest"
+                android:id="@+id/btnmacc"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="2"
                 android:backgroundTint="@color/blue"
                 android:elevation="0dp"
-                android:text="Sensor"
+                android:text="btnmacc"
                 android:textAllCaps="false"
-                android:textSize="25sp" />
+                android:textSize="15sp" />
 
             <Button
                 android:id="@+id/btntest2222"
